force-app/main/default/objects/opd_paper__c/opd_paper__c.object-meta.xml
<CustomObject>
    <label>opd_paper</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>opd_papers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>