force-app/main/default/objects/opd_paper__c/fields/advice__c.field-meta.xml
<CustomField>
    <fullName>advice__c</fullName>
    <label>advice</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>