force-app/main/default/objects/opd_paper__c/fields/allergy__c.field-meta.xml
<CustomField>
    <fullName>allergy__c</fullName>
    <label>allergy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>