force-app/main/default/objects/opd_paper__c/fields/complaints__c.field-meta.xml
<CustomField>
    <fullName>complaints__c</fullName>
    <label>complaints</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>