force-app/main/default/objects/opd_paper__c/fields/diagnosis__c.field-meta.xml
<CustomField>
    <fullName>diagnosis__c</fullName>
    <label>diagnosis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>