force-app/main/default/objects/opd_paper__c/fields/examFindings__c.field-meta.xml
<CustomField>
    <fullName>examFindings__c</fullName>
    <label>examFindings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>