force-app/main/default/objects/opd_paper__c/fields/followupId__c.field-meta.xml
<CustomField>
    <fullName>followupId__c</fullName>
    <label>followupId</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>