force-app/main/default/objects/opd_paper__c/fields/investigationsAdvised__c.field-meta.xml
<CustomField>
    <fullName>investigationsAdvised__c</fullName>
    <label>investigationsAdvised</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>