force-app/main/default/objects/opd_paper__c/fields/lastUpdated__c.field-meta.xml
<CustomField>
    <fullName>lastUpdated__c</fullName>
    <label>lastUpdated</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>