force-app/main/default/objects/opd_paper__c/fields/pastHistory__c.field-meta.xml
<CustomField>
    <fullName>pastHistory__c</fullName>
    <label>pastHistory</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>