force-app/main/default/objects/opd_paper__c/fields/previousInvestigations__c.field-meta.xml
<CustomField>
    <fullName>previousInvestigations__c</fullName>
    <label>previousInvestigations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>