force-app/main/default/objects/opd_paper__c/fields/screening__c.field-meta.xml
<CustomField>
    <fullName>screening__c</fullName>
    <label>screening</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>