force-app/main/default/objects/opd_paper__c/fields/suchana__c.field-meta.xml
<CustomField>
    <fullName>suchana__c</fullName>
    <label>suchana</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>